package com.example.Finma_BE.enums;

public enum DebtStatus {
    ONGOING,PAID,OVERDUE
}
