package com.example.Finma_BE.enums;

public enum DebtType {
    LOAN,LEND
}
